# counterfactual-explanations-for-time-series

./: .gitignore  LICENSE  MANIFEST.IN  README.md  REFERENCES.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
cf_native_guide/: native_guide.py
cf_wachter/: wachter.py
cfts/: __init__.py
cfts/cf__abstract/: abstract.py
cfts/cf_ab_cf/: ab_cf.py
cfts/cf_cels/: cels.py  cels_forda_comparison.ipynb  mcels_reimp.py
cfts/cf_cem/: cem.md  cem.py
cfts/cf_cfwot/: cfwot.py
cfts/cf_cgm/: __init__.py  cgm.py
cfts/cf_comte/: comte.py
cfts/cf_confetti/: confetti.py
cfts/cf_counts/: counts.py
cfts/cf_dandl/: dandl.py
cfts/cf_discox/: __init__.py  discox.py  discox_old2.py  discox_simple.py
cfts/cf_emd/: README.md  emd.py  emd_old.py
cfts/cf_fastpace/: __init__.py  fastpace.py
cfts/cf_fft_cf/: README.md  __init__.py  compare_fft_variants.py  evaluate_fft_variants.py  evaluate_keane_metrics.py  evaluate_multivariate.py  evaluate_ucr_datasets.py  evaluate_univariate.py  fft_cf.py
cfts/cf_glacier/: glacier.py  glacier_forda_comparison.ipynb  glacier_reimp.py
cfts/cf_imfact/: README.md  imfact.py  imfact_old.py
cfts/cf_lasts/: lasts.py  lasts_old.py
cfts/cf_mg_cf/: mg_cf.py  (+5 more)
examples/: example_arabicdigits.py  example_forda.py  example_metrics_evaluation.py  example_multivariate.py  example_univariate.py  example_univariate_ecg.py  example_univariate_faultdetectiona.py  example_vibration.py  metrics_evaluation_example.py  requirements.txt  run_all.py
utils/: base_data.py  base_model.py  example.py  names.py  test.py
(+84 files in other folders)
